fix overlapping text in banner

--- a/css/custom.css
+++ b/css/custom.css
@@ -488,21 +488,27 @@ iframe {
 	.event-banner-wrapper {
 	    position: relative;
 	    width: 100%;
-	    height: 300px;
+	    height: 400px;
 		padding: 15px;
 	}
 
 	.event-banner-wrapper h2 {
 	    font-size: 38px;
 	    line-height: 38px;
+      padding-bottom: 60px;
 	}
 
 	.event-banner-wrapper h2 span {
 	    font-size: 16px;
 	}
 
+  p.date {
+      bottom: 60px;
+  }
+
 	.event-ticket-wrapper {
 	    padding: 20px;
+      padding-bottom: 100px;
 	}
 
 	.event-tab .nav-tabs {
